--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
                             </button>
                         </div>
-                        <p class="text-base italic opacity-90">"The limits of my language mean the limits of my world." - Ludwig Wittgenstein</p>
+                        <p class="text-base italic opacity-90">Bebas</p>
                     </div>
                     <!-- Kolom Kanan: Gambar -->
                     <div class="hidden md:block relative h-full self-end">
@@ -431,3 +431,4 @@
     </script>
 </body>
 </html>
+
